# business-scraper-DA

./: .gitignore  Business Scraper.aip  CMakeLists.txt  LICENSE  LICENSE_THIRD_PARTY  README.md  build_cli.sh  build_gui.ps1  build_gui.sh  config.template.ini
include/: Business.h  Formatter.h  MapScraper.h  WebScraper.h
include/core/: BusinessScraperEngine.h
include/gui/: ConfigDialog.h  MainWindow.h  ResultsWidget.h  SearchWidget.h  StyleManager.h  TableItemDelegate.h
include/output/: Formatter.h
include/scrapers/: MapScraper.h  WebScraper.h
include/utils/: ConfigManager.h  FileUtils.h
src/: main_cli.cpp
src/classes/: Business.cpp  Formatter.cpp  MapScraper.cpp  WebScraper.cpp
src/core/: Business.cpp  BusinessScraperEngine.cpp
src/gui/: ConfigDialog.cpp  MainWindow.cpp  ResultsWidget.cpp  SearchWidget.cpp  StyleManager.cpp  TableItemDelegate.cpp  main_gui.cpp
src/output/: Formatter.cpp
src/scrapers/: MapScraper.cpp  WebScraper.cpp
src/utils/: ConfigManager.cpp  FileUtils.cpp
